# nav2_bot

./: .gitignore  NAVIGATION_SETUP_DOCUMENTATION.md  README.md  frames_2025-08-07_15.11.19.gv
install/: local_setup.sh  setup.sh
install/testbed_bringup/share/testbed_bringup/: local_setup.sh  package.sh
install/testbed_bringup/share/testbed_bringup/launch/: testbed_full_bringup.launch.py
install/testbed_description/share/testbed_description/: local_setup.sh  package.sh
install/testbed_description/share/testbed_description/launch/: robot_description.launch.py
install/testbed_description/share/testbed_description/urdf/: testbed.xacro
install/testbed_gazebo/share/testbed_gazebo/: package.sh
install/testbed_navigation/share/testbed_navigation/: package.sh
install/testbed_navigation/share/testbed_navigation/config/: amcl_params.yaml  nav2_params.yaml
log/: latest_build
testbed_bringup/: CMakeLists.txt
testbed_bringup/launch/: testbed_full_bringup.launch.py
testbed_description/launch/: robot_description.launch.py
testbed_description/rviz/: full_bringup.rviz
testbed_description/urdf/: testbed.gazebo  testbed.xacro
testbed_navigation/: CMakeLists.txt  README.md
testbed_navigation/config/: amcl_params.yaml  custom_navigate_through_poses.xml
testbed_navigation/launch/: complete_navigation.launch.py  full_navigation.launch.py  map_loader.launch.py  nav2_bringup.launch.py  navigation_launch.py
testbed_navigation/maps/: map.pgm  map.yaml
testbed_navigation/params/: nav2_params.yaml
(+6 files in other folders)
